--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,30 +1,33 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        google()
         mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:3.2.0'
     }
 }
 
 repositories {
+    google()
     mavenCentral()
     jcenter()
 }
 
 subprojects {
     repositories {
+        google()
         mavenCentral()
         jcenter()
     }
 
     ext {
-        compileSdkVersion = 25
-        buildToolsVersion = "25.0.3"
+        compileSdkVersion = 28
+        buildToolsVersion = "28.0.3"
         minSdkVersion = 17
         targetSdkVersion = 22
-        supportLibVersion = "25.3.1"
+        supportLibVersion = "28.0.0"
     }
 }
