--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,3 +17,8 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
+
+#AS 3.0会在manifest文件中加上android:testOnly="true"属性，导致run出来的apk在部分国产手机上只能用adb install -t 来安装。
+android.injected.testOnly=false
+
+android.enableAapt2=true
