--- a/android/hera/build.gradle
+++ b/android/hera/build.gradle
@@ -1,25 +1,25 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:design:25.3.1'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.android.support:design:28.0.0'
 
-    compile "com.github.bumptech.glide:glide:3.7.0"
-    compile 'com.squareup.okhttp3:okhttp:3.7.0'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.google.zxing:android-core:3.3.0'
-    compile 'com.google.zxing:core:3.3.0'
+    api "com.github.bumptech.glide:glide:3.7.0"
+    api 'com.squareup.okhttp3:okhttp:3.7.0'
+    api 'com.google.code.gson:gson:2.8.1'
+    api 'com.google.zxing:android-core:3.3.0'
+    api 'com.google.zxing:core:3.3.0'
 
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'me.iwf.photopicker:PhotoPicker:0.9.5@aar'
+    api 'com.nineoldandroids:library:2.4.0'
+    api 'me.iwf.photopicker:PhotoPicker:0.9.5@aar'
 
-    compile 'com.facebook.stetho:stetho:1.5.0'
-    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    api 'com.facebook.stetho:stetho:1.5.0'
+    api 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 }
 
 android {
     compileSdkVersion project.compileSdkVersion
-    buildToolsVersion project.buildToolsVersion
+    //buildToolsVersion project.buildToolsVersion
 
     defaultConfig {
         minSdkVersion project.minSdkVersion
