--- a/android/hera/build.gradle
+++ b/android/hera/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
+//    api fileTree(dir: 'libs', include: ['*.jar'])
     api 'com.android.support:design:28.0.0'
 
     api "com.github.bumptech.glide:glide:3.7.0"
@@ -15,6 +15,9 @@ dependencies {
 
     api 'com.facebook.stetho:stetho:1.5.0'
     api 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+
+    // x5内核
+    api 'com.tencent.tbs.tbssdk:sdk:43697'
 }
 
 android {
